[package]
name = "cnpj"
version = "0.2.0"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
edition = "2018"
description = "Brazilian CNPJ parsing, validating and formatting library."
categories = ["no-std"]
keywords = ["cnpj", "Brasil", "Brazil"]
documentation = "https://docs.rs/cnpj"
license = "MIT"
repository = "https://github.com/reu/cnpj-rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
rand = { version = "0.8", optional = true }

[features]
default = ["std"]
std = []
full = ["std", "rand"]
